@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>test-ui-museng</artifactId>
+    <artifactId>Automation_Exercise_v2_no_cucumber</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <selenium.version>4.11.0</selenium.version>
         <assertj-core.version>3.23.1</assertj-core.version>
@@ -18,7 +18,7 @@
         <slf4j-simple.version>2.0.5</slf4j-simple.version>
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
         <javafaker.version>1.0.2</javafaker.version>
-        <lombok.version>1.18.12</lombok.version>
+        <lombok.version>1.18.34</lombok.version> <!-- Updated version -->
         <webdrivermanager.version>5.5.3</webdrivermanager.version>
     </properties>
 
@@ -97,25 +97,20 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.0</version> <!-- Updated version -->
+                <version>3.10.0</version>
                 <configuration>
+                    <source>17</source>
+                    <target>17</target>
                     <compilerArgs>
                         <arg>--add-opens</arg>
                         <arg>java.base/java.lang=ALL-UNNAMED</arg>
                         <arg>--add-opens</arg>
                         <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                     </compilerArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
